exports[`test A default checked value 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }>
    <RadioButton
      checked={false}
      label="One"
      onChange={[Function]}
      value="one" />
    <RadioButton
      checked={true}
      label="Two"
      onChange={[Function]}
      value="two" />
  </div>
</div>
`;

exports[`test Dark tone class + light theme class 1`] = `
<div
  className="pe-light-tone"
  style={
    Object {
      "background": "#fff",
      "padding": "20px",
    }
  }>
  <n />
</div>
`;

exports[`test Dark tone class + light tone 1`] = `
<div
  style={
    Object {
      "background": "#fff",
      "padding": "20px",
    }
  }>
  <n />
</div>
`;

exports[`test No options 1`] = `
<SelectionControl
  icons={
    Object {
      "iconOff": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\"/></svg>",
      "iconOn": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\"/></svg>",
    }
  }
  instanceClass="pe-radio-control"
  selectable={[Function]}
  theme={[Function]}
  type="radio" />
`;

exports[`test Option: class 1`] = `
<SelectionControl
  className="class-x"
  icons={
    Object {
      "iconOff": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\"/></svg>",
      "iconOn": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\"/></svg>",
    }
  }
  instanceClass="pe-radio-control"
  selectable={[Function]}
  theme={[Function]}
  type="radio" />
`;

exports[`test Option: className 1`] = `
<SelectionControl
  className="className-x"
  icons={
    Object {
      "iconOff": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\"/></svg>",
      "iconOn": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\"/></svg>",
    }
  }
  instanceClass="pe-radio-control"
  selectable={[Function]}
  theme={[Function]}
  type="radio" />
`;

exports[`test Option: defaultChecked 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }>
    <RadioButton
      checked={false}
      defaultChecked={null}
      label="One"
      onChange={[Function]}
      value="one" />
    <RadioButton
      checked={true}
      defaultChecked={true}
      label="Two"
      onChange={[Function]}
      value="two" />
  </div>
</div>
`;

exports[`test Option: disabled -- dark tone 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }>
    <RadioButton
      checked={false}
      disabled={true}
      label="One"
      onChange={[Function]}
      value="one" />
    <RadioButton
      checked={true}
      defaultChecked={true}
      disabled={true}
      label="Two"
      onChange={[Function]}
      value="two" />
  </div>
</div>
`;

exports[`test Option: disabled 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }>
    <RadioButton
      checked={false}
      disabled={true}
      label="One"
      onChange={[Function]}
      value="one" />
    <RadioButton
      checked={true}
      defaultChecked={true}
      disabled={true}
      label="Two"
      onChange={[Function]}
      value="two" />
  </div>
</div>
`;

exports[`test Option: element 1`] = `
<SelectionControl
  element="a"
  icons={
    Object {
      "iconOff": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\"/></svg>",
      "iconOn": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\"/></svg>",
    }
  }
  instanceClass="pe-radio-control"
  selectable={[Function]}
  theme={[Function]}
  type="radio" />
`;

exports[`test Option: iconButton (custom hover behaviour) 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }>
    <RadioButton
      checked={false}
      iconButton={
        Object {
          "ink": false,
          "wash": true,
        }
      }
      label="Hover me"
      onChange={[Function]}
      value="one" />
    <RadioButton
      checked={false}
      iconButton={
        Object {
          "ink": false,
          "wash": true,
        }
      }
      label="Hover me"
      onChange={[Function]}
      value="two" />
  </div>
</div>
`;

exports[`test Option: iconOn, iconOff (custom icon) 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }>
    <RadioButton
      checked={false}
      iconOff={
        Object {
          "svg": <div
            dangerouslySetInnerHTML={
                Object {
                    "__html": "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" version=\"1.1\" baseProfile=\"full\" width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 11.9994,15.3943L 8.2364,17.6643L 9.2314,13.3833L 5.9094,10.5053L 10.2894,10.1293L 11.9994,6.09327L 13.7094,10.1293L 18.0894,10.5053L 14.7674,13.3833L 15.7624,17.6643M 21.9994,9.24227L 14.8084,8.62526L 11.9994,1.99827L 9.1904,8.62526L 1.9994,9.24227L 7.4544,13.9693L 5.8194,20.9983L 11.9994,17.2703L 18.1794,20.9983L 16.5444,13.9693L 21.9994,9.24227 Z \"/></svg>",
                  }
            } />,
        }
      }
      iconOn={
        Object {
          "svg": <div
            dangerouslySetInnerHTML={
                Object {
                    "__html": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\"/></svg>",
                  }
            } />,
        }
      }
      label="One"
      onChange={[Function]}
      size="small"
      value="one" />
    <RadioButton
      checked={false}
      iconOff={
        Object {
          "svg": <div
            dangerouslySetInnerHTML={
                Object {
                    "__html": "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" version=\"1.1\" baseProfile=\"full\" width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 11.9994,15.3943L 8.2364,17.6643L 9.2314,13.3833L 5.9094,10.5053L 10.2894,10.1293L 11.9994,6.09327L 13.7094,10.1293L 18.0894,10.5053L 14.7674,13.3833L 15.7624,17.6643M 21.9994,9.24227L 14.8084,8.62526L 11.9994,1.99827L 9.1904,8.62526L 1.9994,9.24227L 7.4544,13.9693L 5.8194,20.9983L 11.9994,17.2703L 18.1794,20.9983L 16.5444,13.9693L 21.9994,9.24227 Z \"/></svg>",
                  }
            } />,
        }
      }
      iconOn={
        Object {
          "svg": <div
            dangerouslySetInnerHTML={
                Object {
                    "__html": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\"/></svg>",
                  }
            } />,
        }
      }
      label="Two"
      onChange={[Function]}
      size="regular"
      value="two" />
    <RadioButton
      checked={false}
      iconOff={
        Object {
          "svg": <div
            dangerouslySetInnerHTML={
                Object {
                    "__html": "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" version=\"1.1\" baseProfile=\"full\" width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 11.9994,15.3943L 8.2364,17.6643L 9.2314,13.3833L 5.9094,10.5053L 10.2894,10.1293L 11.9994,6.09327L 13.7094,10.1293L 18.0894,10.5053L 14.7674,13.3833L 15.7624,17.6643M 21.9994,9.24227L 14.8084,8.62526L 11.9994,1.99827L 9.1904,8.62526L 1.9994,9.24227L 7.4544,13.9693L 5.8194,20.9983L 11.9994,17.2703L 18.1794,20.9983L 16.5444,13.9693L 21.9994,9.24227 Z \"/></svg>",
                  }
            } />,
        }
      }
      iconOn={
        Object {
          "svg": <div
            dangerouslySetInnerHTML={
                Object {
                    "__html": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\"/></svg>",
                  }
            } />,
        }
      }
      label="Three"
      onChange={[Function]}
      size="medium"
      value="three" />
    <RadioButton
      checked={false}
      iconOff={
        Object {
          "svg": <div
            dangerouslySetInnerHTML={
                Object {
                    "__html": "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" version=\"1.1\" baseProfile=\"full\" width=\"24\" height=\"24\" viewBox=\"0 0 24.00 24.00\" enable-background=\"new 0 0 24.00 24.00\" xml:space=\"preserve\"><path fill=\"#000000\" fill-opacity=\"1\" stroke-width=\"0.2\" stroke-linejoin=\"round\" d=\"M 11.9994,15.3943L 8.2364,17.6643L 9.2314,13.3833L 5.9094,10.5053L 10.2894,10.1293L 11.9994,6.09327L 13.7094,10.1293L 18.0894,10.5053L 14.7674,13.3833L 15.7624,17.6643M 21.9994,9.24227L 14.8084,8.62526L 11.9994,1.99827L 9.1904,8.62526L 1.9994,9.24227L 7.4544,13.9693L 5.8194,20.9983L 11.9994,17.2703L 18.1794,20.9983L 16.5444,13.9693L 21.9994,9.24227 Z \"/></svg>",
                  }
            } />,
        }
      }
      iconOn={
        Object {
          "svg": <div
            dangerouslySetInnerHTML={
                Object {
                    "__html": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\"/></svg>",
                  }
            } />,
        }
      }
      label="Four"
      onChange={[Function]}
      size="large"
      value="four" />
  </div>
</div>
`;

exports[`test Option: id 1`] = `
<SelectionControl
  icons={
    Object {
      "iconOff": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\"/></svg>",
      "iconOn": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\"/></svg>",
    }
  }
  id="id-x"
  instanceClass="pe-radio-control"
  selectable={[Function]}
  theme={[Function]}
  type="radio" />
`;

exports[`test Option: label -- dark tone 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }>
    <RadioButton
      checked={false}
      label="One"
      onChange={[Function]}
      value="one" />
    <RadioButton
      checked={false}
      label="Two"
      onChange={[Function]}
      value="two" />
  </div>
</div>
`;

exports[`test Option: label 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }>
    <RadioButton
      checked={false}
      label="One"
      onChange={[Function]}
      value="one" />
    <RadioButton
      checked={false}
      label="Two"
      onChange={[Function]}
      value="two" />
  </div>
</div>
`;

exports[`test Option: onChange (JSX) 1`] = `
<form>
  <div
    style={
      Object {
        "margin": "0 0 1rem 0",
      }
    }>
    Value: undefined
  </div>
  <RadioButton
    checked={false}
    label="One"
    onChange={[Function]}
    value="one" />
  <RadioButton
    checked={false}
    label="Two"
    onChange={[Function]}
    value="two" />
</form>
`;

exports[`test Option: onChange 1`] = `
<div>
  <div
    style={
      Object {
        "margin": "0 0 1rem 0",
      }
    }>
    Value: undefined
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }>
    <RadioButton
      checked={false}
      label="One"
      onChange={[Function]}
      value="one" />
    <RadioButton
      checked={false}
      label="Two"
      onChange={[Function]}
      value="two" />
    <RadioButton
      checked={false}
      label="Three"
      onChange={[Function]}
      value="three" />
    <RadioButton
      checked={false}
      label="Four"
      onChange={[Function]}
      value="four" />
  </div>
</div>
`;

exports[`test Option: selectable (true) 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }>
    <RadioButton
      checked={false}
      label="Always"
      onChange={[Function]}
      selectable={[Function]}
      value="one" />
    <RadioButton
      checked={true}
      defaultChecked={true}
      label="Always"
      onChange={[Function]}
      selectable={[Function]}
      value="two" />
  </div>
</div>
`;

exports[`test Option: size 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }>
    <RadioButton
      checked={false}
      label="One"
      onChange={[Function]}
      size="small"
      value="one" />
    <RadioButton
      checked={false}
      label="Two"
      onChange={[Function]}
      size="regular"
      value="two" />
    <RadioButton
      checked={false}
      label="Three"
      onChange={[Function]}
      size="medium"
      value="three" />
    <RadioButton
      checked={false}
      label="Four"
      onChange={[Function]}
      size="large"
      value="four" />
  </div>
</div>
`;

exports[`test Option: style (colors) 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }>
    <RadioButton
      checked={false}
      label="One"
      onChange={[Function]}
      style={
        Object {
          "color": "#EF6C00",
        }
      }
      value="one" />
    <RadioButton
      checked={true}
      defaultChecked={true}
      label="Two"
      onChange={[Function]}
      style={
        Object {
          "color": "#EF6C00",
        }
      }
      value="two" />
  </div>
</div>
`;

exports[`test Option: tabindex 1`] = `
<SelectionControl
  icons={
    Object {
      "iconOff": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\"/></svg>",
      "iconOn": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\"/></svg>",
    }
  }
  instanceClass="pe-radio-control"
  selectable={[Function]}
  tabIndex={3}
  theme={[Function]}
  type="radio" />
`;

exports[`test Option: value 1`] = `
<SelectionControl
  icons={
    Object {
      "iconOff": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\"/></svg>",
      "iconOn": "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\"/></svg>",
    }
  }
  instanceClass="pe-radio-control"
  name="worth"
  selectable={[Function]}
  theme={[Function]}
  type="radio"
  value="notable" />
`;

exports[`test Themed radio button (color and font size) -- dark tone 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }>
    <RadioButton
      checked={false}
      className="tests-radio-button-themed-radio"
      label="One"
      onChange={[Function]}
      value="one" />
    <RadioButton
      checked={false}
      className="tests-radio-button-themed-radio"
      label="Two"
      onChange={[Function]}
      value="two" />
  </div>
</div>
`;

exports[`test Themed radio button (color and font size) 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }>
    <RadioButton
      checked={false}
      className="tests-radio-button-themed-radio"
      label="One"
      onChange={[Function]}
      value="one" />
    <RadioButton
      checked={false}
      className="tests-radio-button-themed-radio"
      label="Two"
      onChange={[Function]}
      value="two" />
  </div>
</div>
`;
